# AI-Edlivery-Ops-Agent

./: .env.example  .gitignore  AGENT.md  AGENTS.md  README.md  pyproject.toml
backend/: .dockerignore  Dockerfile  README.md  docker-compose.yml  package.json  prisma.config.ts  tsconfig.json
backend/prisma/: schema.prisma
backend/src/: index.ts
backend/src/adapters/: email.ts  feishu.ts  llm.ts  tapd.ts
backend/src/core/: config.ts  scheduler.ts  storage.ts
backend/src/models/: types.ts
backend/src/services/: dashboard.ts  jobs.ts  messageIntent.ts  standup.ts  standupLLM.ts  summaries.ts  taskParser.ts
backend/test/: adapters.test.ts  storage.test.ts  taskParser.test.ts
backend/test_data/messages/: msg_123.json
config/: config.example.json
delivery_ops_bridge/: __init__.py  cli.py  config.py  models.py  server.py  storage.py
delivery_ops_bridge/adapters/: feishu.py  llm.py  tapd.py
delivery_ops_bridge/services/: dashboard.py  jobs.py  message_handler.py  message_intent.py  scheduler.py  standup.py  summaries.py  task_parser.py
docs/: 保姆级第三方平台接入配置指南.md  后端存储与协作架构探究.md  后端存储与协作架构设计方案.md  存储架构升级方案设计.md  系统架构与业务逻辑详解.md  项目部署与开发协作流程.md
frontend/: .gitignore  README.md  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.app.tsbuildinfo  vite.config.ts
frontend/src/: App.jsx  App.tsx  api.js  api.ts  constants.js  constants.ts  types.ts
frontend/src/layouts/: MainLayout.tsx
scripts/: crontab.example  run.sh
tests/: __init__.py  conftest.py  test_feishu_adapter.py  test_message_handler.py  test_message_intent.py  test_server.py
(+36 files in other folders)
