[project]
name = "delivery-ops-bridge"
version = "0.1.0"
description = "Event-driven Delivery Ops Bridge for Feishu, TAPD, and LLM-assisted project operations."
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
delivery-ops-bridge = "delivery_ops_bridge.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
